--- a/src/components/SearchBar/searchBar.module.scss
+++ b/src/components/SearchBar/searchBar.module.scss
@@ -66,6 +66,7 @@ button.button {
 @include mixins.mobile {
     .input {
         padding: 0 5px 0 10px;
+        width: inherit;
     }
 
     .label {
